<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="title_upload">Upload</string>
    <string name="title_library">Library</string>
    <string name="My_Upload">My Upload</string>
    <string name="Upload_My_Book">upload my book</string>
    <string name="My_Book">My Book</string>
    <string name="My_Upload_Book">my upload book</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="authors">Authors</string>
    <string name="publisher">Publisher</string>
    <string name="publish_date">Publish Date</string>
    <string name="general_category">General Category</string>
    <string name="My_Status">My Status</string>
    <string name="View_Status">Check Your Status</string>
    <string name="My_Library">My Library</string>
    <string name="View_Library">Check Your Library</string>
    <string name="Upload_Book">Check Your Upload</string>
    <string name="Settings">Settings</string>
    <string name="Update_Settings">Update Your Themes</string>
    <string name="User_Name">User Name</string>
    <string name="User_Name_email">User@gmail.com</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="arrow_icon">Arrow Icon</string>
    <string name="rating">Rating</string>
    <string name="popular">Popular Books</string>
    <string name="arrivals">New Arrivals</string>
    <string name="recommend">Recommended for You</string>
    <string name="empty_library">Empty</string>
    <string name="My_Home">My Home</string>
    <string name="View_Home">Search Your Book</string>
    <string name="image_desc">Logo</string>
    <string name="us_book">US Book</string>
</resources>