<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.capstoneproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.example.capstoneproject.ui.upload.UploadFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_upload" >

            <!-- Action to LibraryFragment -->
            <action
                android:id="@+id/action_navigation_upload_to_navigation_library"
                app:destination="@id/navigation_library"
                app:popUpTo="@id/navigation_upload"
                app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.capstoneproject.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.capstoneproject.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">

        <!-- Action to LibraryFragment -->
        <action
            android:id="@+id/action_navigation_profile_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_profile"
            app:popUpToInclusive="true" />

        <!-- Action to UploadFragment -->
        <action
            android:id="@+id/action_navigation_profile_to_upload"
            app:destination="@id/navigation_upload"
            app:popUpTo="@id/navigation_profile"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>