<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <!-- Circular Profile Image -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_account_circle_24"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"/>

            <!-- User Name -->
            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/User_Name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center" />
        </LinearLayout>

        <!-- Card for My Status -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_my_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title_my_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/My_Status"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subtitle_my_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_my_status"
                    android:layout_marginTop="4dp"
                    android:text="@string/View_Status"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/icon_arrow_my_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_arrow_right_24"
                    app:tint="@android:color/white" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card for My Library -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_my_library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title_my_library"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/My_Library"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subtitle_my_library"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_my_library"
                    android:layout_marginTop="4dp"
                    android:text="@string/View_Library"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/icon_arrow_my_library"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_arrow_right_24"
                    app:tint="@android:color/white" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card for My Upload -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_my_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title_my_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/My_Upload"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subtitle_my_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_my_upload"
                    android:layout_marginTop="4dp"
                    android:text="@string/Upload_Book"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/icon_arrow_my_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_arrow_right_24"
                    app:tint="@android:color/white" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card for Setting -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Settings"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subtitle_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_setting"
                    android:layout_marginTop="4dp"
                    android:text="@string/Update_Settings"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/icon_arrow_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_arrow_right_24"
                    app:tint="@android:color/white" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>