<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upload.UploadFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_my_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="8dp"
        android:elevation="4dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/card_my_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/title_my_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/My_Upload"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle_my_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_my_upload"
                android:layout_marginTop="4dp"
                android:text="@string/Upload_My_Book"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/icon_arrow_my_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/baseline_arrow_right_24"
                app:tint="@android:color/white" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_my_book"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:elevation="4dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_my_upload">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/title_my_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/My_Book"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle_my_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_my_book"
                android:layout_marginTop="4dp"
                android:text="@string/My_Upload_Book"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/icon_arrow_my_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/baseline_arrow_right_24"
                app:tint="@android:color/white" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>