<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_section_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnBackground"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_books_horizontal_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginBottom="8dp"
                tools:listitem="@layout/item_book" />

            <TextView
                android:id="@+id/tv_section_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrivals"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnBackground"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_books_horizontal_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginBottom="8dp"
                tools:listitem="@layout/item_book" />

            <TextView
                android:id="@+id/tv_section_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnBackground"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_books_horizontal_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginBottom="8dp"
                tools:listitem="@layout/item_book" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>